--- a/android app/app/src/main/res/values/themes.xml
+++ b/android app/app/src/main/res/values/themes.xml
@@ -2,4 +2,6 @@
 <resources>
 
     <style name="Theme.FilmAjánlóAlkalmazás" parent="android:Theme.Material.Light.NoActionBar" />
+    <style name="Theme.FilmAjánlóAlkalmazás2" parent="Theme.AppCompat.Light.NoActionBar" />
+
 </resources>
