--- a/android app/app/src/main/res/layout/activity_welcome_navigation.xml
+++ b/android app/app/src/main/res/layout/activity_welcome_navigation.xml
@@ -9,10 +9,10 @@
     <!-- 👤 Profilkép (lekerekített) -->
     <ImageView
         android:id="@+id/imageProfile"
-        android:layout_width="120dp"
-        android:layout_height="120dp"
+        android:layout_width="match_parent"
+        android:layout_height="450dp"
         android:layout_marginTop="32dp"
-        android:src="@drawable/sigmaboy"
+        android:src="@drawable/giga_chad_a"
     android:scaleType="centerCrop"
     android:background="@drawable/circle_background"
     android:contentDescription="Profile Picture"
