--- a/android app/app/src/main/res/layout/activity_registration.xml
+++ b/android app/app/src/main/res/layout/activity_registration.xml
@@ -15,6 +15,7 @@
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
+        android:background="#AFC0CA"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -26,15 +27,15 @@
             android:id="@+id/backArrow"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginTop="12dp"
-            android:layout_marginStart="12dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginTop="4dp"
+            android:clickable="true"
+            android:contentDescription="Vissza"
+            android:focusable="true"
             android:padding="8dp"
             android:src="@drawable/back_arrow"
-            android:contentDescription="Vissza"
-            android:clickable="true"
-            android:focusable="true"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <FrameLayout
             android:id="@+id/my_frame"
@@ -60,7 +61,11 @@
             android:layout_height="49dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/text_field_background"
+            android:backgroundTint="#D6DFEB"
             android:text="Registration"
+            android:textAllCaps="false"
+            android:textColor="#1A475F"
+            android:textSize="16sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/PasswordText" />
@@ -218,7 +223,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Already have an account?"
-            android:textColor="#2196F3"
+            android:textColor="#2B6D90"
+            android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
