--- a/android app/app/src/main/res/layout/activity_main2.xml
+++ b/android app/app/src/main/res/layout/activity_main2.xml
@@ -6,27 +6,33 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:background="#AFC0CA"
+        android:orientation="vertical"
         android:paddingStart="16dp"
-        android:paddingEnd="16dp"
         android:paddingTop="32dp"
-        android:paddingBottom="24dp"
-        android:orientation="vertical">
+        android:paddingEnd="16dp"
+        android:paddingBottom="24dp">
 
         <EditText
             android:id="@+id/etMovie"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:background="@android:drawable/editbox_background"
             android:hint="Írd be a film címét"
             android:minHeight="48dp"
-            android:padding="12dp"
-            android:background="@android:drawable/editbox_background" />
+            android:padding="12dp" />
 
         <Button
             android:id="@+id/btnSearch"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
-            android:text="Keresés" />
+            android:background="@drawable/text_field_background"
+            android:backgroundTint="#D6DFEB"
+            android:text="Keresés"
+            android:textAllCaps="false"
+            android:textColor="#1A475F"
+            android:textSize="20sp" />
 
         <!-- Kép vastag kerettel -->
         <ImageView
@@ -34,50 +40,52 @@
             android:layout_width="match_parent"
             android:layout_height="400dp"
             android:layout_marginTop="24dp"
-            android:scaleType="centerCrop"
-            android:background="@drawable/poster_border" />
+            android:background="@drawable/poster_border"
+            android:backgroundTint="#FFFFFF"
+            android:scaleType="centerCrop" />
 
         <!-- Szövegmezők enyhe keretben -->
         <TextView
             android:id="@+id/tvTitle"
-            android:textStyle="bold"
-            android:textSize="20sp"
-            android:layout_marginTop="16dp"
-            android:padding="12dp"
-            android:background="@drawable/text_field_background"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="16dp"
+            android:background="@drawable/text_field_background"
+            android:padding="12dp"
+            android:textSize="20sp"
+            android:textStyle="bold" />
 
         <TextView
             android:id="@+id/tvReleaseDate"
-            android:layout_marginTop="8dp"
-            android:padding="10dp"
-            android:background="@drawable/text_field_background"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/text_field_background"
+            android:padding="10dp" />
 
         <TextView
             android:id="@+id/tvRating"
-            android:layout_marginTop="8dp"
-            android:padding="10dp"
-            android:background="@drawable/text_field_background"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/text_field_background"
+            android:padding="10dp" />
 
         <TextView
             android:id="@+id/tvOverview"
-            android:layout_marginTop="8dp"
-            android:padding="12dp"
-            android:background="@drawable/text_field_background"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" />
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:background="@drawable/text_field_background"
+            android:padding="12dp" />
+
         <LinearLayout
             android:id="@+id/imageRow"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="12dp"
-            android:orientation="horizontal"
-            android:gravity="center_vertical">
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
 
             <!-- 5 kis ikon egymás mellett -->
             <ImageView
@@ -85,50 +93,50 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginEnd="4dp"
-                android:src="@drawable/black_star"
-                android:contentDescription="Small image 1"
                 android:clickable="true"
-                android:focusable="true"/>
+                android:contentDescription="Small image 1"
+                android:focusable="true"
+                android:src="@drawable/black_star" />
 
             <ImageView
                 android:id="@+id/star2"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginEnd="4dp"
-                android:src="@drawable/black_star"
-                android:contentDescription="Small image 2"
                 android:clickable="true"
-                android:focusable="true"/>
+                android:contentDescription="Small image 2"
+                android:focusable="true"
+                android:src="@drawable/black_star" />
 
             <ImageView
                 android:id="@+id/star3"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginEnd="4dp"
-                android:src="@drawable/black_star"
-                android:contentDescription="Small image 3"
                 android:clickable="true"
-                android:focusable="true"/>
+                android:contentDescription="Small image 3"
+                android:focusable="true"
+                android:src="@drawable/black_star" />
 
             <ImageView
                 android:id="@+id/star4"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginEnd="4dp"
-                android:src="@drawable/black_star"
-                android:contentDescription="Small image 4"
                 android:clickable="true"
-                android:focusable="true"/>
+                android:contentDescription="Small image 4"
+                android:focusable="true"
+                android:src="@drawable/black_star" />
 
             <ImageView
                 android:id="@+id/star5"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginEnd="16dp"
-                android:src="@drawable/black_star"
-                android:contentDescription="Small image 5"
                 android:clickable="true"
-                android:focusable="true"/>
+                android:contentDescription="Small image 5"
+                android:focusable="true"
+                android:src="@drawable/black_star" />
 
             <!-- 6. kép külön térközzel -->
             <ImageView
@@ -136,28 +144,28 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_marginStart="24dp"
-                android:src="@drawable/black_heart"
-                android:contentDescription="Small image 6"
                 android:clickable="true"
-                android:focusable="true"/>
+                android:contentDescription="Small image 6"
+                android:focusable="true"
+                android:src="@drawable/black_heart" />
         </LinearLayout>
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:orientation="horizontal"
             android:layout_marginTop="16dp"
             android:gravity="center"
+            android:orientation="horizontal"
             android:weightSum="2">
 
             <Button
                 android:id="@+id/btnBack"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:layout_marginEnd="8dp"
-                android:text="Vissza"
+                android:layout_weight="1"
                 android:backgroundTint="#2196F3"
+                android:text="Vissza"
                 android:textColor="#FFFFFF" />
 
             <Button
@@ -165,8 +173,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:text="Mentés"
                 android:backgroundTint="#4CAF50"
+                android:text="Mentés"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
 
