--- a/android app/app/src/main/res/layout/activity_navigation.xml
+++ b/android app/app/src/main/res/layout/activity_navigation.xml
@@ -2,63 +2,78 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#AFC0CA"
+    android:gravity="center"
     android:orientation="vertical"
-    android:background="#FAFAFA"
-    android:padding="24dp"
-    android:gravity="center">
+    android:padding="24dp">
+
     <TextView
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="GAMF Giga Chad \n Mobil App"
-        android:textSize="24sp"
-        android:textStyle="bold"
-        android:textColor="#3F51B5"
+        android:layout_gravity="center_horizontal"
         android:layout_marginTop="24dp"
         android:layout_marginBottom="8dp"
-        android:letterSpacing="0.05"
-        android:textAllCaps="true"
         android:gravity="center"
-        android:layout_gravity="center_horizontal" />
+        android:letterSpacing="0.05"
+        android:text="Movie Recommendation"
+        android:textAllCaps="true"
+        android:textColor="#3F51B5"
+        android:textSize="24sp"
+        android:textStyle="bold" />
 
     <ImageView
         android:id="@+id/ivPoster"
         android:layout_width="match_parent"
         android:layout_height="300dp"
         android:layout_marginTop="24dp"
+        android:background="@drawable/poster_border"
         android:scaleType="centerCrop"
-        android:src="@drawable/sigmaboy"
-        android:background="@drawable/poster_border" />
+        android:src="@drawable/sigmaboy" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="vertical"
+        android:layout_marginTop="30dp"
+        android:layout_marginBottom="24dp"
         android:background="@drawable/button_container_bg"
-        android:padding="24dp"
         android:elevation="6dp"
-        android:layout_marginBottom="24dp">
+        android:orientation="vertical"
+        android:padding="24dp">
 
 
         <Button
             android:id="@+id/btnLogin"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/text_field_background"
+            android:backgroundTint="#D6DFEB"
             android:text="Belépés"
-            android:backgroundTint="#3F51B5"
-            android:textColor="#FFFFFF"
-            android:layout_marginBottom="12dp" />
+            android:textAllCaps="false"
+            android:textColor="#1A475F"
+            android:textSize="18sp" />
 
         <Button
             android:id="@+id/btnMain2"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginBottom="12dp"
+            android:background="@drawable/text_field_background"
+            android:backgroundTint="#D6DFEB"
             android:text="Regisztráció"
-            android:backgroundTint="#3F51B5"
-            android:textColor="#FFFFFF"
-            android:layout_marginBottom="12dp" />
+            android:textAllCaps="false"
+            android:textColor="#1A475F"
+            android:textSize="18sp" />
 
 
     </LinearLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="68dp">
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
 
 </LinearLayout>
