--- a/android app/app/src/main/res/layout/activity_login.xml
+++ b/android app/app/src/main/res/layout/activity_login.xml
@@ -14,7 +14,7 @@
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
-        android:background="#AFC0CA"
+        android:background="#BFC7CE"
         android:foregroundTint="#2196F3"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -95,7 +95,7 @@
             android:layout_marginEnd="24dp"
             android:layout_marginBottom="10dp"
             android:background="@drawable/text_field_background"
-            android:backgroundTint="#D6DFEB"
+            android:backgroundTint="#e9e9e9"
             android:text="Login"
             android:textAlignment="center"
             android:textAllCaps="false"
@@ -117,7 +117,7 @@
             android:layout_marginTop="12dp"
             android:layout_marginEnd="8dp"
             android:layout_marginBottom="400dp"
-            android:src="@drawable/movie_kor"
+            android:src="@drawable/home_png_kor"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -131,7 +131,7 @@
             android:clickable="true"
             android:focusable="true"
             android:text="Don't have an account? Create one"
-            android:textColor="#2B6D90"
+            android:textColor="#577789"
             android:textColorLink="#7B8080"
             android:textSize="16sp"
             android:textStyle="bold"
@@ -145,15 +145,15 @@
             android:id="@+id/topLeftArrow"
             android:layout_width="48dp"
             android:layout_height="48dp"
-            android:layout_marginTop="12dp"
             android:layout_marginStart="12dp"
+            android:layout_marginTop="12dp"
+            android:clickable="true"
+            android:contentDescription="Navigate"
+            android:focusable="true"
             android:padding="8dp"
             android:src="@drawable/back_arrow"
-            android:contentDescription="Navigate"
-            android:clickable="true"
-            android:focusable="true"
-            app:layout_constraintTop_toTopOf="parent"
-            app:layout_constraintStart_toStartOf="parent" />
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
 
 
     </androidx.constraintlayout.widget.ConstraintLayout>
