--- a/android app/app/src/main/res/layout/activity_main2.xml
+++ b/android app/app/src/main/res/layout/activity_main2.xml
@@ -6,7 +6,7 @@
         android:id="@+id/main"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:background="#AFC0CA"
+        android:background="#BFC7CE"
         android:orientation="vertical"
         android:paddingStart="16dp"
         android:paddingTop="32dp"
@@ -28,7 +28,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="8dp"
             android:background="@drawable/text_field_background"
-            android:backgroundTint="#D6DFEB"
+            android:backgroundTint="#e9e9e9"
             android:text="Keresés"
             android:textAllCaps="false"
             android:textColor="#1A475F"
