--- a/android app/app/src/main/res/layout/activity_navigation.xml
+++ b/android app/app/src/main/res/layout/activity_navigation.xml
@@ -2,39 +2,24 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#AFC0CA"
+    android:background="@drawable/homepage_png"
     android:gravity="center"
     android:orientation="vertical"
     android:padding="24dp">
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center_horizontal"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="8dp"
-        android:gravity="center"
-        android:letterSpacing="0.05"
-        android:text="Movie Recommendation"
-        android:textAllCaps="true"
-        android:textColor="#3F51B5"
-        android:textSize="24sp"
-        android:textStyle="bold" />
-
     <ImageView
         android:id="@+id/ivPoster"
-        android:layout_width="match_parent"
+        android:layout_width="300dp"
         android:layout_height="300dp"
         android:layout_marginTop="24dp"
-        android:background="@drawable/poster_border"
+        android:background="@drawable/circle_background"
         android:scaleType="centerCrop"
-        android:src="@drawable/sigmaboy" />
+        android:src="@drawable/home_png_kor" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginTop="30dp"
+        android:layout_marginTop="40dp"
         android:layout_marginBottom="24dp"
         android:background="@drawable/button_container_bg"
         android:elevation="6dp"
@@ -48,7 +33,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:background="@drawable/text_field_background"
-            android:backgroundTint="#D6DFEB"
+            android:backgroundTint="#e9e9e9"
             android:text="Belépés"
             android:textAllCaps="false"
             android:textColor="#1A475F"
@@ -60,7 +45,7 @@
             android:layout_height="wrap_content"
             android:layout_marginBottom="12dp"
             android:background="@drawable/text_field_background"
-            android:backgroundTint="#D6DFEB"
+            android:backgroundTint="#e9e9e9"
             android:text="Regisztráció"
             android:textAllCaps="false"
             android:textColor="#1A475F"
