--- a/android app/app/src/main/res/layout/activity_registration.xml
+++ b/android app/app/src/main/res/layout/activity_registration.xml
@@ -15,7 +15,7 @@
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
-        android:background="#AFC0CA"
+        android:background="#BFC7CE"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
@@ -61,7 +61,7 @@
             android:layout_height="49dp"
             android:layout_marginTop="24dp"
             android:background="@drawable/text_field_background"
-            android:backgroundTint="#D6DFEB"
+            android:backgroundTint="#e9e9e9"
             android:text="Registration"
             android:textAllCaps="false"
             android:textColor="#1A475F"
@@ -223,7 +223,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="Already have an account?"
-            android:textColor="#2B6D90"
+            android:textColor="#577789"
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
