--- a/android app/app/src/main/res/layout/activity_welcome_navigation.xml
+++ b/android app/app/src/main/res/layout/activity_welcome_navigation.xml
@@ -3,7 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#AFC0CA"
+    android:background="#BFC7CE"
     android:padding="24dp">
 
     <!-- 👤 Profilkép (lekerekített) -->
@@ -15,7 +15,7 @@
         android:background="@drawable/circle_background"
         android:contentDescription="Profile Picture"
         android:scaleType="centerCrop"
-        android:src="@drawable/giga_chad_a"
+        android:src="@drawable/fh_ikon"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -27,7 +27,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
         android:background="@drawable/text_field_background"
-        android:backgroundTint="#D6DFEB"
+        android:backgroundTint="#e9e9e9"
         android:text="Search"
         android:textAllCaps="false"
         android:textColor="#215573"
@@ -43,7 +43,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
         android:background="@drawable/text_field_background"
-        android:backgroundTint="#D6DFEB"
+        android:backgroundTint="#e9e9e9"
         android:text="My Profile"
         android:textAllCaps="false"
         android:textColor="#215573"
@@ -59,7 +59,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="24dp"
         android:text="Welcome back, Adam!"
-        android:textColor="#2B6D90"
+        android:textColor="#577789"
         android:textSize="20sp"
         android:textStyle="italic"
         app:layout_constraintEnd_toEndOf="parent"
