--- a/android app/app/src/main/res/layout/fragment_search.xml
+++ b/android app/app/src/main/res/layout/fragment_search.xml
@@ -1,7 +1,9 @@
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<?xml version="1.0" encoding="utf-8"?>
+<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-
+    android:layout_height="match_parent"
+    tools:context=".SearchFragment">
     <LinearLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
@@ -177,7 +179,5 @@
                 android:text="Mentés"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
-
-
     </LinearLayout>
-</ScrollView>
+</FrameLayout>
