--- a/android app/app/src/main/res/layout/fragment_search.xml
+++ b/android app/app/src/main/res/layout/fragment_search.xml
@@ -4,6 +4,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".SearchFragment">
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
     <LinearLayout
         android:id="@+id/main"
         android:layout_width="match_parent"
@@ -160,15 +163,7 @@
             android:orientation="horizontal"
             android:weightSum="2">
 
-            <Button
-                android:id="@+id/btnBack"
-                android:layout_width="0dp"
-                android:layout_height="wrap_content"
-                android:layout_marginEnd="8dp"
-                android:layout_weight="1"
-                android:backgroundTint="#2196F3"
-                android:text="Vissza"
-                android:textColor="#FFFFFF" />
+
 
             <Button
                 android:id="@+id/btnSave"
@@ -180,4 +175,5 @@
                 android:textColor="#FFFFFF" />
         </LinearLayout>
     </LinearLayout>
+    </ScrollView>
 </FrameLayout>
